; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_vidc.c_vidc_audio_set_format.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_vidc.c_vidc_audio_set_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vidc_audio_format = common dso_local global i32 0, align 4
@vidc_audio_channels = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @vidc_audio_set_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidc_audio_set_format(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %6 [
    i32 128, label %7
    i32 129, label %7
    i32 130, label %7
    i32 131, label %12
  ]

6:                                                ; preds = %2
  store i32 130, i32* %4, align 4
  br label %7

7:                                                ; preds = %2, %2, %2, %6
  %8 = load i32, i32* %4, align 4
  store i32 %8, i32* @vidc_audio_format, align 4
  %9 = load i32, i32* @vidc_audio_format, align 4
  %10 = load i32, i32* @vidc_audio_channels, align 4
  %11 = call i32 @vidc_update_filler(i32 %9, i32 %10)
  br label %12

12:                                               ; preds = %2, %7
  br label %13

13:                                               ; preds = %12
  %14 = load i32, i32* @vidc_audio_format, align 4
  ret i32 %14
}

declare dso_local i32 @vidc_update_filler(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
